--- a/SmartLunch/appsettings.json
+++ b/SmartLunch/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SmartLunchContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SmartLunchSystem;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=true"
+  },
+  "OpenId": {
+    "ClientId": "1019391910323-5s9csp88j1lruboso8kd8ultsvn6vldv.apps.googleusercontent.com",
+    "ClientSecret": "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"
   }
 }
