Added gitignore file and login method

--- a/SmartLunch/appsettings.json
+++ b/SmartLunch/appsettings.json
@@ -9,8 +9,11 @@
   "ConnectionStrings": {
     "SmartLunchContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SmartLunchSystem;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=true"
   },
-  "OpenId": {
-    "ClientId": "1019391910323-5s9csp88j1lruboso8kd8ultsvn6vldv.apps.googleusercontent.com",
-    "ClientSecret": "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"
+  "Authentication": {
+    "Google": {
+      "UserInfoUrl": "https://www.googleapis.com/oauth2/v1/userinfo",
+      "ClientId": "1019391910323-5s9csp88j1lruboso8kd8ultsvn6vldv.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
   }
 }
