--- a/UserManagementApi/appsettings.json
+++ b/UserManagementApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=SmarLunchSystem;User Id=sa;Password=YourPassword123!;TrustServerCertificate=true;"
+  },
   "AllowedHosts": "*"
 }
