Fixed Connection string, Added migrations and updated database

--- a/SmartLunch/appsettings.json
+++ b/SmartLunch/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SmartLunchContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SmartLunchSystem;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=true"
+    "SmartLunchContextConnection": "Server=localhost;Database=SmartLunchSystem;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
   },
   "Authentication": {
     "Google": {
