Added controller Api

--- a/SmartLunch/appsettings.json
+++ b/SmartLunch/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SmartLunchContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SmartLunchSystem;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=true"
+    "SmartLunchContextConnection": "Server=localhost,1433;Database=SmartLunchSystem;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
   },
   "OpenId": {
     "ClientId": "1019391910323-5s9csp88j1lruboso8kd8ultsvn6vldv.apps.googleusercontent.com",
