--- a/SmartLunch.Api/appsettings.json
+++ b/SmartLunch.Api/appsettings.json
@@ -2,11 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
   "ConnectionStrings": {
-    "SmartLunchContextConnection": "Server=localhost;Database=SmartLunchSystem;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    "SmartLunchConnection": "Server=localhost;Database=SmartLunchSystem;User Id=sa;Password=YourStrong!Passw0rd;Integrated Security=false;Encrypt=True;TrustServerCertificate=True;"
+
   },
   "AllowedHosts": "*"
 }
