--- a/SmartLunch.Api/appsettings.json
+++ b/SmartLunch.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "SmartLunchConnection": "Server=localhost;Database=SmartLunchSystem;User Id=sa;Password=YourStrong!Passw0rd;Integrated Security=false;Encrypt=True;TrustServerCertificate=True;"
+    "SmartLunchConnection": "Server=localhost;Database=SmartLunchSystem;User Id=sa;Password=YourStrong!Passw0rd;Integrated Security=false;TrustServerCertificate=True;"
 
   },
   "AllowedHosts": "*"
