Changing Endpoints to use _userManager to save and get data

--- a/SmartLunch.Api/appsettings.json
+++ b/SmartLunch.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "SmartLunchConnection": "Server=localhost;Database=SmartLunchSystem;User Id=sa;Password=YourStrong!Passw0rd;Integrated Security=false;TrustServerCertificate=True;"
+    "SmartLunchConnection": "Server=localhost;Database=SmartLunchSystem;User Id=sa;Password=YourStrong!Passw0rd;Integrated Security=false;TrustServerCertificate=True;MultipleActiveResultSets=true"
 
   },
   "AllowedHosts": "*"
