--- a/SmartLunch.Database/SmartLunch.Database.csproj
+++ b/SmartLunch.Database/SmartLunch.Database.csproj
@@ -18,9 +18,20 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.6" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.6" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.6" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Folder Include="Migrations\" />
+	</ItemGroup>
+
+	<!-- In destination project .csproj -->
+	<ItemGroup>
+	  <None Include="..\SmartLunch.Api\appsettings.json">
+	    <Link>appsettings.json</Link>
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 </Project>
