--- a/SmartLunch/Properties/launchSettings.json
+++ b/SmartLunch/Properties/launchSettings.json
@@ -21,8 +21,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7235;http://localhost:5200",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5200;https://localhost:5200",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
