--- a/SmartLunch/appsettings.json
+++ b/SmartLunch/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "1019391910323-5s9csp88j1lruboso8kd8ultsvn6vldv.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "AllowedHosts": "*"
 }
