--- a/SmartLunch/Properties/launchSettings.json
+++ b/SmartLunch/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5200;https://localhost:5200",
+      "applicationUrl": "https://localhost:7235;http://localhost:5200",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
